<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".LoginPage.FacultyLoginPage"
android:gravity="center"
android:background="@color/blue">

<ImageView
    android:id="@+id/uvLogoId"
    android:layout_width="170dp"
    android:layout_height="180dp"
    android:src="@drawable/logo"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/facultyLoginPage"
    android:textSize="25sp"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:background="@color/black"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="20dp"
    />

<EditText
    android:id="@+id/usernameId"
    android:layout_width="match_parent"
    android:layout_height="51dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/edit_text_shap"
    android:drawableLeft="@drawable/user_icon"
    android:hint="@string/username_hint"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:maxLines="1"
    android:inputType="text"
    android:scrollHorizontally="true"

    />

<EditText
    android:id="@+id/passwordId"
    android:layout_width="match_parent"
    android:layout_height="51dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/edit_text_shap"
    android:drawableLeft="@drawable/password_icon"
    android:hint="@string/password_hint"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:inputType="textPassword"
    android:maxLines="1"
    android:scrollHorizontally="true"

    />

<Button
    android:id="@+id/loginButtonId"
    android:layout_width="213dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/blue_button_shap"
    android:text="Login"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:paddingBottom="10dp"/>

</LinearLayout>