<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:weightSum="2"
android:padding="5dp"
android:background="@color/backgrounAdminHome"
android:gravity="center"
android:orientation="vertical"
tools:context=".StudentPanel.StudentPanel">

<LinearLayout
    android:gravity="center"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/stdInfoCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundblue"
                android:padding="10dp"
                android:src="@drawable/view_personal_info"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundblue"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/std_option1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/materialBlue"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/stdCourseCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundpurpale"
                android:padding="10dp"
                android:src="@drawable/viewcourse"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundpurpale"/>
            <TextView
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/std_option2"
                android:textStyle="bold"
                android:textColor="@color/materialPurpale"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>

<LinearLayout
    android:gravity="center"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/stdfeedbackCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundcerise"
                android:padding="10dp"
                android:src="@drawable/feedback"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundcerise"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/std_option3"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/materialCerise"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/stdViewFileCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundcyan"
                android:padding="10dp"
                android:src="@drawable/viewfile"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundcyan"/>
            <TextView
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/std_option4"
                android:textStyle="bold"
                android:textColor="@color/materialCyan"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
</LinearLayout>