<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:padding="5dp"
    android:background="@color/backgrounAdminHome"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FacultyPanel.FacultyPanel">

<LinearLayout
    android:gravity="center"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/facultyInfoCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundgreen"
                android:padding="10dp"
                android:src="@drawable/view_personal_info"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundgreen"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/faculty_option1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/materialGreen"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/acCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundred"
                android:padding="10dp"
                android:src="@drawable/assigned_subject"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundred"/>
            <TextView
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/faculty_option2"
                android:textStyle="bold"
                android:textColor="@color/materialRed"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>

<LinearLayout
    android:gravity="center"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/feedbackCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundblue"
                android:padding="10dp"
                android:src="@drawable/feedback"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundblue"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/faculty_option3"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/materialBlue"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_margin="10dp"
        android:id="@+id/uploadFileCardView"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/circlebackgroundpurpale"
                android:padding="10dp"
                android:src="@drawable/file_upload"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@drawable/circlebackgroundpurpale"/>
            <TextView
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/faculty_option4"
                android:textStyle="bold"
                android:textColor="@color/materialPurpale"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
</LinearLayout>