<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:padding="5dp"
    android:background="@color/backgrounAdminHome"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AdminPanel.AdminPanel">

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/stdCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundgreen"
                    android:padding="10dp"
                    android:src="@drawable/addstudent"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundgreen"/>
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option1"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/materialGreen"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/facultyCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundred"
                    android:padding="10dp"
                    android:src="@drawable/addperson"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundred"/>
                <TextView
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option2"
                    android:textStyle="bold"
                    android:textColor="@color/materialRed"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/viewstdCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundblue"
                    android:padding="10dp"
                    android:src="@drawable/viewstudent"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundblue"/>
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option3"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/materialBlue"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/viewfacultyCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundpurpale"
                    android:padding="10dp"
                    android:src="@drawable/viewperson"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundpurpale"/>
                <TextView
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option4"
                    android:textStyle="bold"
                    android:textColor="@color/materialPurpale"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/courseCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundcyan"
                    android:padding="10dp"
                    android:src="@drawable/course"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundcyan"/>
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option5"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/materialCyan"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/assignCourseCardView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundcerise"
                    android:padding="10dp"
                    android:src="@drawable/assigncourse"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/circlebackgroundcerise"/>
                <TextView
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option6"
                    android:textStyle="bold"
                    android:textColor="@color/materialCerise"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>



</LinearLayout>